# serial

./: .gitignore  CMakeLists.txt  README.md  SerialConfig.h.in  checkapi  checkftdi  main.cpp  version.txt
binaries/aarch64/: Readme.md  serial  serial_place_order
binaries/linux64/: Readme.md  serial
binaries/m1/: Readme.md  serial
binaries/mac/: Readme.md  rawdata.txt  serial  serial_org
binaries/nginxfrontend/: Readme.md  default  defaultssl  index.html
binaries/win/Debug/: serial.ilk
binaries/win/Release/: Readme.md
binaries/win64/Release/: Readme.md
documentation/: Readme.md  rpi.md
lib/: CMakeLists.txt  analyseData.cpp  analyseData.h  listener.cpp  listener.h  read.cpp  read.h  readwin.cpp  readwin.h  serialData.cpp  serialData.h  serialUtils.cpp  serialUtils.h  serialwin.cpp
lib/mosquitto-1.6.9/: CMakeLists.txt
mosquitto-1.6.9/: CMakeLists.txt
mosquitto-1.6.9/lib/: CMakeLists.txt  mosquitto.c
mqtt/: CMakeLists.txt  mqttUtils.cpp  mqttUtils.h  mqttpublisher.cpp  mqttpublisher.h  publisher.cpp  publisher.h  raw_connect.cpp  raw_connect.h
receiver/: CMakeLists.txt  CMakeLists_notworking.txt  CmakeCheck.txt  analyseData.cpp  analyseData.h  ftd2xx.h  read.cpp  read.h  readFTDI.cpp  readGPIO.cpp  readftdi.h  readwin.cpp
receiver/lib/: Readme.md
receiver/libarmv8/: Readme.md
receiver/libm/: Readme.md
receiver/libwin32/: Readme.md
scripts/: createReleaseNumber.sh
sender/: CMakeLists.txt  send.cpp  send.h  sendwin.cpp
serialconnect/: CMakeLists.txt  analyseData.cpp  analyseData.h  analyseHeader.cpp  analyseHeader.h  analyseLane.cpp  analyseLane.h  analyseRunningTime.cpp  analyseRunningTime.h  analyseStartStop.cpp  analyseStartStop.h  debug.txt  helperFunctions.cpp  helperFunctions.h  info.cpp  info.h  listener.cpp  listener.h  read.cpp  read.h  readwin.cpp  readwin.h  serial.cpp  serialData.cpp  serialData.h  serialUtils.cpp  serialUtils.h  serialwin.h
terminal/: CMakeLists.txt  read.cpp  readwin.cpp  terminalread.h
tests/: 01-test-base.cpp  01-test-data.cpp  01-test-mqtt.cpp  01-test-serial.cpp  Base.hh  BaseWin.hh  CMakeLists.txt
utils/: CMakeLists.txt  data.cpp  data.h  setInterface.cpp  setInterface.h
